add_executable(bitsprint, bitsprint.cpp)
cotire(bitsprint)
add_executable(check_c11, check_c11.cpp)
cotire(check_c11)
add_executable(accumulate, accumulate.cpp)
cotire(accumulate)
add_executable(datarange, datarange.cpp)
cotire(datarange)
add_executable(spinlock, spinlock.cpp)
cotire(spinlock)
#add_executable(pragma, pragma.cpp)
add_executable(endian, endian.cpp)
add_executable(typepromote, typepromote.cpp)
add_executable(floatingpoint, floatingpoint.cpp)

add_subdirectory(ReadDataasInput)