add_subdirectory(longestpalindrome)
add_subdirectory(editdistance)
add_subdirectory(minimumwindowsubstr)
add_subdirectory(trappingwater)
add_subdirectory(slidingwindownmax)
add_subdirectory(maxsubsequncesum)
add_subdirectory(maxsubarraysum)
add_subdirectory(longestnonrepsubstr)
add_subdirectory(distinctsubsequence)
add_subdirectory(palindromepair)
