add_subdirectory(longestpalindrome)
add_subdirectory(editdistance)
add_subdirectory(minimumwindowsubstr)
add_subdirectory(trappingwater)
add_subdirectory(slidingwindownmax)
add_subdirectory(maxsubsequncesum)
add_subdirectory(maxsubarraysum)
add_subdirectory(longestnonrepsubstr)
add_subdirectory(distinctsubsequence)
add_subdirectory(palindromepair)
add_subdirectory(dividearray)
add_subdirectory(longestcommonsubsequence)
add_subdirectory(removekdigits)
add_subdirectory(createmaxnumber)

add_subdirectory(largestdivisiblesubset)
add_subdirectory(painthouses)

add_subdirectory(leftmostsmallernumber)

add_subdirectory(burstballoons)

add_subdirectory(longestincreasingpathinmatrix)

add_subdirectory(minimumpathsum)
add_subdirectory(combination_sum4)

add_subdirectory(buysellstock)

add_subdirectory(buysellstock2)

add_subdirectory(buysellstock3)

add_subdirectory(buysellstock4)

add_subdirectory(buysellstock5)

add_subdirectory(minimumsubarraylen)

add_subdirectory(longestvalidparentheses)
