add_subdirectory(validbst)
add_subdirectory(traversal_verticalorder)
add_subdirectory(traversal_sideview)
add_subdirectory(traversal_preorder)
add_subdirectory(traversal_inorder)
add_subdirectory(traversal_postorder)
add_subdirectory(traversal_levelorder)
add_subdirectory(pathsum)
add_subdirectory(inordersuccessorbst)
add_subdirectory(parsestr2tree)
add_subdirectory(findvalueinbst)
add_subdirectory(countersmallernumberafterself)
add_subdirectory(buildtreefrompreordernorder)
